@@ -62,6 +62,8 @@ will not be print anymore on standard output when --report-file option used
 - CAUTION: BC breaks with API 2.8.0 with the new filter system
 - list-references does not require --reference option anymore (always used ALL)
 - results of list-references may now be filtered
+- add a full report (all results at once:
+summary, extensions, interfaces, traits, classes, functions, constants, globals, tokens, conditions)
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
